<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:id="@+id/pin_row_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_one"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_one" />

            <TextView
                android:id="@+id/pin_two"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_two" />

            <TextView
                android:id="@+id/pin_three"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_three" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pin_row_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pin_row_one"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_four"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_four" />

            <TextView
                android:id="@+id/pin_five"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_five" />

            <TextView
                android:id="@+id/pin_six"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_six" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/pin_row_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pin_row_two"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_seven"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_seven" />

            <TextView
                android:id="@+id/pin_eight"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_eight" />

            <TextView
                android:id="@+id/pin_nine"
                style="@style/pinViewTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_nine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pin_row_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pin_row_three"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pin_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_cancel"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pin_zero"
                style="@style/pinViewTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:text="@string/pin_zero" />

            <ImageView
                android:id="@+id/pin_check_btn"
                style="@style/pinViewTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:src="@drawable/ic_check_24" />

        </LinearLayout>

    </RelativeLayout>

    <com.androdevlinux.percy.stackingsats.ui.security.PinEntryEditText
        android:id="@+id/pin_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/pin_layout"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:focusable="false"
        android:inputType="number|numberPassword"
        android:maxLength="4"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pin_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pin_verification_code"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:text="@string/pin_enter_pin_prompt"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>