<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountInINR"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:hint="@string/amount_in_inr"
        android:textColorHint="@color/primaryTextColor"
        app:boxStrokeColor="@drawable/text_input_box_stroke"
        app:hintTextColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/weeklyMonthlySpinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAmountInINR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/weeklyMonthlySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:gravity="start|center"
        android:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        android:entries="@array/weeklyOrMonthly"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/for_experienced_user_only"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveChanges"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountInINR" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:strokeColor="@color/colorOrange"
        android:textSize="15sp"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeklyMonthlySpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>

