<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:background="@color/colorPrimaryDusk"
        android:backgroundTint="@color/colorPrimaryDusk"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        card_view:cardCornerRadius="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/current_offer_details"
                android:textSize="20sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreateFirstOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_first_offer"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    tools:cornerRadius="5dp"
                    tools:strokeColor="@color/colorOrange"
                    android:textSize="15sp"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/nextDateOfCreatingOfferLinearLayoutCompat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nextDateOfCreatingOfferTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textColor="@color/primaryTextColor"
                        android:text="@string/next_offer_creating_date"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nextDateOfCreatingOffer"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textColor="@color/primaryTextColor"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.appcompat.widget.LinearLayoutCompat>